
## 20130710
##
## changed all instances of .find.package() to find.package() in demos
## for compatibility with R > 3.0.0
##
## Makevars.win changed for current Rtools toolset in Windows.

## 20150326
##
## added names=files to load.images for compatibility with Shiny version
##
## added eqa option to col3d and wf3d.pupil

## 20150329
##
## removed lspuw and modalpuw
## removed options to call these from high level fitting functions
##

## 20150401
##
## removed congruence (no longer called by anything)
##
## added hypot, zmoments, addfit, separate.wf

## 20160215
##
## pcapsi adds a parameter to control treatment of singular values
## diagpos = 1 uses my reinterpretation of Vargas' algorithm
## pcafit adds same parameter

## 20160713
##
## replaced zpmatrix.c with zpmC.cpp
## added Rcpp infrastructure as needed
## zpm calls zpmC
## removed some unnecessary return()'s
## cleaned up some source code formatting
## changed default fill value for padmatrix to mean
## removed foucault test reduction routines

## 20160714
##
## fixed line in separate.wf
## added gpcapsi -- my iterative PCA based algorithm
## pcafit changes options for diagpos=c("v", "u", "g") and adds trace
## use pcafit(..., diagpos="g", trace=n, ...) to call gpcapsi

## 20160715
##
## pcaest.r demo calls library function plotn instead of custom version

## 20160717
##
## updated help files
## added example for pcafit (could do this for others someday)

## 20160725
##
## replace rzernike with C++ version

## 20170910
##
## added modified brcutpuw to this package
## calls to phase unwrapping routines changed

## 20170911
##
## added sconic - more accurate wavefront error for testing asphere at coc
## changed default test wavelength and scaling in zconic

## 20170920
##
## raw image file support added

## 20181229
##
## improved structure of aiapsi

## 20181230
##
## split up R source files

## 20190102
##
## lspsi, aiapsi are wrappers for
## lspsiC, aiapsiC